layoutparts-part1課題提出

--- a/LayoutParts-Part1課題提出/q1/index.html
+++ b/LayoutParts-Part1課題提出/q1/index.html
@@ -33,13 +33,13 @@
     <h3 class="question--title">Q1-2 上下左右中央寄せ</h3>
     <!-- Q1-2の回答はここから -->
     <!-- tableを使って上下左右中央寄せ -->
-    <div class="q1--perimeter table--parent"><!-- q1--と同じ階層でdisplay: table;を設定する -->
+    <div class="q1--perimeter table--parent">
         <div class="table--child">
-          <div class="table--text">table</div><!-- table-cellを設定する要素とテキストの階層を分ける-->
+          <div class="table--text">table</div>
       </div>
     </div>
     <!-- flexを使って上下左右中央寄せ -->
-    <div class="q1--perimeter flex--parent"><!-- q1--と同じ階層でdisplay: flex;を設定する -->
+    <div class="q1--perimeter flex--parent">
         <div class="flex--text">flex</div>
     </div>
     <!-- positionを使って上下左右中央寄せ -->
